--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 body{
+    background-color: #F7F7F7;
     font-family: "BBH Sans Bartle", sans-serif;
     font-weight: 10;
     font-style: normal;
@@ -13,7 +14,7 @@ nav{
     list-style: none;
     display: flex;
     align-items: center;
-    width: 100%;
+    width: 99%;
     justify-content: space-between;
 }
 #div-titulo-e-imagen{
@@ -23,7 +24,7 @@ nav{
 }
 #div-titulo-e-imagen a{
     text-decoration: none;
-    color: blue;
+    color: #929AAB;
 }
 
 #logo{
@@ -34,9 +35,6 @@ nav{
 
 #logo img{
     width: 50px;
-}
-#titulo-nav h1{
-    color:blue;
 }
 #titulo-nav{
     display: flex;
@@ -61,17 +59,29 @@ Seccion Central, titulo y campo de texto donde se pone el nombre
 -----------------
 */
 #sect-titulo-central h1{
-    font-size: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 8vw;
+    width: 100%;
+    margin-bottom: 0;
 }
 #parrafo-titulo-central{
     display: flex;
     justify-content: center;
     font-size: 30px;
+    color : #393E46;
+}
+#parrafo-titulo-ingresa-nombre{
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    margin-top: 10px;
+    color: rgba(128, 128, 128, 0.541);
 }
 #input-central{
     display: flex;
     justify-content: center;
-    width: 100%;
     padding: 10px;
     border-radius: 4px;
 }
