--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 body{
+    display: flexbox;
     background-color: #F7F7F7;
     font-family: "BBH Sans Bartle", sans-serif;
     font-weight: 10;
@@ -30,6 +31,7 @@ nav{
     text-decoration: none;
     color: white;
     background-color: #0078D7;
+    font-size: 2vm;
 }
 
 #logo{
@@ -57,6 +59,16 @@ nav{
     list-style: none;
     gap: 20px;
 }
+#div-ul-li ul a{
+    text-decoration: none;
+    color: black;
+    font-size: 18px;
+}
+#div-ul-li ul a:hover{
+    text-decoration: none;
+    color: #0078D7;
+    font-size: 18px;
+}
 
 /*
 -----------------
@@ -67,7 +79,7 @@ Seccion Central, titulo y campo de texto donde se pone el nombre
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 8vw;
+    font-size: 20vh;
     width: 100%;
     margin-bottom: 0;
 }
@@ -99,8 +111,48 @@ Seccion Central, titulo y campo de texto donde se pone el nombre
     height: 30px;
     font-size: 20px;
 }
-#boton-ingresar{
+#span-boton-ingresar{
     display: flex;
     justify-content: center;
     margin-top: 20px;
+}
+/*
+-----------------
+Seccion PARRAFO SOBRE NOSOTROS... 
+-----------------
+*/
+
+#sect-sobre-nosotros , #sect-como-comprar{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 200px;
+    margin-bottom: 100px;
+    width: 100%;
+}
+
+#sect-sobre-nosotros h2,#sect-como-comprar h2{
+    font-size: 40px;
+    margin-bottom: 20px;
+    color: #0078D7;
+}
+#sect-sobre-nosotros p,#sect-como-comprar p{
+    font-size: 15px;
+    margin-bottom: 20px;
+    color: rgb(36, 35, 35);
+}
+/*
+-----------------
+footer... 
+-----------------
+*/
+footer{
+    display: flex;
+    bottom:0;
+    width: 100%;
+    justify-content: bottom;
+    align-items: bottom;
+    color: gray;
+    font-size: 12px;
 }
