--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+/*Desplazamiento suave*/
+html {
+  scroll-behavior: smooth;
+}
+
 body{
     display: flexbox;
     background-color: #F7F7F7;
@@ -5,11 +10,33 @@ body{
     font-weight: 10;
     font-style: normal;
 }
-/*Seccion Navegacion*/
-
+/*
+======================
+Seccion Navegacion
+======================*/
+header{
+   top: 0;
+   background-color: #f7f7f7b4;
+   margin: 0 auto;
+   border-bottom: 0.5px solid rgb(230, 230, 230);
+   position: sticky;
+}
 nav{
     display: flex;
     justify-content: center;
+}
+/*
+=====================
+Menu desplegable para el responsive
+=====================
+*/
+#menu-toggle {
+  display: none;
+}
+
+
+#menu-links {
+    display: none;
 }
 #div-nav{
     list-style: none;
@@ -31,7 +58,7 @@ nav{
     text-decoration: none;
     color: white;
     background-color: #0078D7;
-    font-size: 2vm;
+    font-size: 1vw;
 }
 
 #logo{
@@ -41,12 +68,13 @@ nav{
 }
 
 #logo img{
-    width: 50px;
+    width: 4vw;
 }
 #titulo-nav{
     display: flex;
     justify-content: left;
 }
+
 
 /*Division de incio, sobre nosotros etc.*/
 #div-ul-li{
@@ -62,12 +90,11 @@ nav{
 #div-ul-li ul a{
     text-decoration: none;
     color: black;
-    font-size: 18px;
+    font-size: 1.1rem;
 }
 #div-ul-li ul a:hover{
     text-decoration: none;
     color: #0078D7;
-    font-size: 18px;
 }
 
 /*
@@ -79,8 +106,9 @@ Seccion Central, titulo y campo de texto donde se pone el nombre
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 20vh;
+    font-size: 8vw;
     width: 100%;
+    margin-top: 150px;
     margin-bottom: 0;
 }
 #span-titulo-disk{
@@ -90,13 +118,13 @@ Seccion Central, titulo y campo de texto donde se pone el nombre
 #parrafo-titulo-central{
     display: flex;
     justify-content: center;
-    font-size: 30px;
+    font-size: 1.5vw;
     color : #393E46;
 }
 #parrafo-titulo-ingresa-nombre{
     display: flex;
     justify-content: center;
-    font-size: 20px;
+    font-size: 2vw;
     margin-top: 10px;
     color: rgba(128, 128, 128, 0.541);
 }
@@ -111,10 +139,24 @@ Seccion Central, titulo y campo de texto donde se pone el nombre
     height: 30px;
     font-size: 20px;
 }
+/*Boton ingresar*/
 #span-boton-ingresar{
     display: flex;
     justify-content: center;
     margin-top: 20px;
+    margin-bottom: 20px;
+}
+#boton-ingresar{
+    background-color: #0078D7;
+    color: white; 
+    border: none;
+    padding: 3vh 8vw;
+    font-size: 16px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+#boton-ingresar:hover{
+    background-color: #004479;
 }
 /*
 -----------------
@@ -123,25 +165,36 @@ Seccion PARRAFO SOBRE NOSOTROS...
 */
 
 #sect-sobre-nosotros , #sect-como-comprar{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 200px;
+    display: block;
+    margin-top: 150px;
     margin-bottom: 100px;
     width: 100%;
 }
 
 #sect-sobre-nosotros h2,#sect-como-comprar h2{
-    font-size: 40px;
+    font-size: 1.7rem;
+    display: flex;
+    margin-top: 0;
+    align-items: center;
+    justify-content: center;
+    width: 99%;
     margin-bottom: 20px;
     color: #0078D7;
 }
+#span-sobre-nosotros-parrafo{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 #sect-sobre-nosotros p,#sect-como-comprar p{
-    font-size: 15px;
+    font-size: 1rem;
+    align-content: center;
+    text-align: center;
     margin-bottom: 20px;
     color: rgb(36, 35, 35);
 }
+
+
 /*
 -----------------
 footer... 
@@ -155,4 +208,66 @@ footer{
     align-items: bottom;
     color: gray;
     font-size: 12px;
+}
+
+
+
+/* 
+RESPONSIVE 
+nota: tener en cuenta que lo responsive va abajo del css por que si no causa conflicto.
+ */
+
+
+@media (max-width: 768px) {
+  /* Mostrar la barrita togle */
+  #menu-toggle {
+    display: block;
+    margin-left: auto; 
+    font-size: 2rem;
+    cursor: pointer;
+    color: black;
+  }
+  /* Ocultar menú por defecto */
+  #menu-links {
+    display: none;
+  }
+  #div-ul-li{
+    display: none;
+  }
+  /*Menu activo, resposnive*/
+  #menu-links.active {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: absolute;
+    top: 70px;
+    right: 0;
+    width: 95%;
+    background-color: white;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    padding: 20px;
+  }
+  #menu-links li {
+    margin-bottom: 10px;
+  }
+  #menu-links li a {
+    color: black;
+    font-size: 1.3rem;
+    text-decoration: none;
+  }
+  #menu-links li a:hover {
+    color: #0078D7;
+  }
+  #div-nav {
+    position: relative;
+  }
+  #logo img{
+        width: 10vw;
+  }
+  #div-titulo-e-imagen h1{
+    text-decoration: none;
+    color: white;
+    background-color: #0078D7;
+    font-size: 5vw;
+  }
 }
