--- a/tpIntegradorFront/css/styles.css
+++ b/tpIntegradorFront/css/styles.css
@@ -97,7 +97,12 @@ Menu desplegable para el responsive
     text-decoration: none;
     color: #0078D7;
 }
-
+#div-ul-li ul img{
+    width: 25px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
 /*
 ==================================================================
 Seccion Central, titulo y campo de texto donde se pone el nombre 
@@ -151,22 +156,64 @@ Seccion Central, titulo y campo de texto donde se pone el nombre
     font-size: 30px;
 }
 
-/* Botón */
-#boton-ingresar{
-    background-color: #0078D7;
-    color: white; 
-    border: none;
-    font-size: 30px;
-    border-radius: 5px;
-    cursor: pointer;
-    width: 155px;
-    height: 60px;
-}
 
-#boton-ingresar:hover{
-    background-color: #004479;
+/*Boton ingresar*/
+    #span-boton-ingresar, #span-boton-login{
+        display: flex;
+        justify-content: center;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+    #boton-ingresar, #boton-login{
+        background-color: #0078D7;
+        color: white; 
+        border: none;
+        padding: 3vh 8vw;
+        font-size: 16px;
+        border-radius: 4px;
+        cursor: pointer;
+    }
+    #boton-ingresar:hover,#boton-login:hover{
+        background-color: #004479;
+    }
+
+#sect-titulo-central h1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 8vw;
+    width: 100%;
+    margin-top: 150px;
+    margin-bottom: 0;
 }
-s
+#span-titulo-disk{
+    display: flex;
+    color:#0078D7;
+}
+#parrafo-titulo-central{
+    display: flex;
+    justify-content: center;
+    font-size: 1.5vw;
+    color : #393E46;
+}
+#parrafo-titulo-ingresa-nombre{
+    display: flex;
+    justify-content: center;
+    font-size: 2vw;
+    margin-top: 10px;
+    color: rgba(128, 128, 128, 0.541);
+}
+#input-central{
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+    border-radius: 4px;
+}
+#input-central input{
+    width: 300px;
+    height: 30px;
+    font-size: 20px;
+}
 /*
 ==================================================================
 Seccion PARRAFO SOBRE NOSOTROS... (QUIENES SOMOS Y COMO COMPRAR)
@@ -217,6 +264,26 @@ footer{
     align-items: bottom;
     color: gray;
     font-size: 12px;
+}
+
+/*=====================
+PAGINA DE LOGIN
+======================*/
+
+#titulo-login{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 5vw;
+    width: 100%;
+    margin-top: 150px;
+    margin-bottom: 0;
+}
+#parrafo-login{
+    display: flex;
+    justify-content: center;
+    font-size: 1.5vw;
+    color : #393E46;
 }
 
 /*
