--- a/tpIntegradorBack/src/public/css/dashboard.css
+++ b/tpIntegradorBack/src/public/css/dashboard.css
@@ -45,7 +45,22 @@ body {
 .admin-nav-link:hover {
     color: #00aaff; 
 }
-
+.admin-boton-volver{
+    display: flex;
+    justify-content: start;
+    margin: 10px;
+}
+.boton-volver{
+    padding: 12px;
+    font-size: 1rem;
+    font-weight: 600;
+    color: #ffffff;
+    background-color: #be1c1c;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
 /* ============================= */
 /*         TÍTULO PRINCIPAL       */
 /* ============================= */
