--- a/tpIntegradorFront/css/styles.css
+++ b/tpIntegradorFront/css/styles.css
@@ -293,7 +293,9 @@ Seccion PARRAFO SOBRE NOSOTROS... (QUIENES SOMOS Y COMO COMPRAR)
 }
 
 #sect-sobre-nosotros p,#sect-como-comprar p{
-    font-size: 1rem;
+    font-size: 1.2rem;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-weight: 600;
     align-content: center;
     text-align: center;
     margin-bottom: 20px;
