--- a/tpIntegradorFront/css/styles.css
+++ b/tpIntegradorFront/css/styles.css
@@ -293,9 +293,7 @@ Seccion PARRAFO SOBRE NOSOTROS... (QUIENES SOMOS Y COMO COMPRAR)
 }
 
 #sect-sobre-nosotros p,#sect-como-comprar p{
-    font-size: 1.2rem;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-weight: 600;
+    font-size: 1rem;
     align-content: center;
     text-align: center;
     margin-bottom: 20px;
@@ -405,6 +403,90 @@ footer{
     background-color: #004479;
 }
 
+/* ===========================
+   Estilo Carrito de Compras
+=========================== */
+.separador-productos-carrito{
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    gap: 5px;
+
+}
+
+#contenedor-carrito {
+  
+    margin: 10px;
+    margin-right: 30px;
+    padding: 20px;
+    border: 2px solid #0078D7;
+    border-radius: 10px;
+    background-color: #f8f8f8;
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
+    font-family: "BBH Sans Bartle", sans-serif;
+    color: #242424;
+    width: 400px;      
+    min-width: 400px;  
+    max-width: 400px;
+
+}
+
+#contenedor-carrito h2 {
+    text-align: center;
+    font-size: 1.8rem;
+    color: #0078D7;
+    margin-bottom: 15px;
+}
+
+#contenedor-carrito ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    
+}
+
+#contenedor-carrito li.item-carrito {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    background-color: #fff;
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+#contenedor-carrito li.item-carrito:hover {
+    transform: scale(1.02);
+    box-shadow: 1px 1px 8px rgba(0,0,0,0.1);
+}
+
+#contenedor-carrito li p {
+    margin: 0;
+}
+
+#contenedor-carrito button {
+    background-color: #0078D7;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 5px 12px;
+    font-size: 0.9rem;
+    cursor: pointer;
+    transition: background-color 0.2s ease;
+}
+
+#contenedor-carrito button:hover {
+    background-color: #004479;
+}
+
+#contenedor-carrito p strong {
+    display: block;
+    text-align: right;
+    font-size: 1.1rem;
+    margin-top: 10px;
+}
 
 /* 
 RESPONSIVE 
