--- a/tpIntegradorFront/css/styles.css
+++ b/tpIntegradorFront/css/styles.css
@@ -425,9 +425,7 @@ footer{
     box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
     font-family: "BBH Sans Bartle", sans-serif;
     color: #242424;
-    width: 400px;      
-    min-width: 400px;  
-    max-width: 400px;
+    width: 45%;
 
 }
 
@@ -462,9 +460,27 @@ footer{
     box-shadow: 1px 1px 8px rgba(0,0,0,0.1);
 }
 
+#div-botones-carrito{
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+}
+
+#boton-eliminar{
+    background-color: red;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 5px 12px;
+    font-size: 0.9rem;
+    cursor: pointer;
+    transition: background-color 0.2s ease;
+}
+
 #contenedor-carrito li p {
     margin: 0;
 }
+
 
 #contenedor-carrito button {
     background-color: #0078D7;
@@ -487,6 +503,28 @@ footer{
     font-size: 1.1rem;
     margin-top: 10px;
 }
+
+/*Ticket !*/
+#fecha-hoy{
+    display: flex;
+    color:rgb(0, 0, 0);
+    text-align: center;
+    justify-content: center;
+    margin-bottom: 15px;
+}
+
+#item-precio{
+    display: flex;
+    color: rgb(0, 0, 0);
+}
+
+#total-precio{
+    display: flex;
+    justify-content: center;
+    font-size: 2.0rem;
+    margin-top: 10px;
+}
+
 
 /* 
 RESPONSIVE 
