--- a/tpIntegradorBack/src/views/partials/nav.ejs
+++ b/tpIntegradorBack/src/views/partials/nav.ejs
@@ -13,6 +13,6 @@
 <script>
     botonVolver = document.querySelector('.boton-volver');
     botonVolver.addEventListener('click', () =>{
-        window.location.href = "http://localhost:5501/TpIntegrador-Bianucci-DeBella-DIV334/tpIntegradorFront/";
+        window.location.href = "http://127.0.0.1:5500/tpIntegradorFront/index.html";
     });
 </script>   
