--- a/tpIntegradorBack/src/views/index.ejs
+++ b/tpIntegradorBack/src/views/index.ejs
@@ -1,12 +1,29 @@
 <%- include("partials/head.ejs") %>
 <%- include("partials/nav.ejs") %>
 
-    <main class="admin-products-page">
-        <h1 class="admin-products-title">LISTA DE PRODUCTOS</h1>
-        <hr class="admin-products-divider">
-        <div class="admin-products-container" id="contenedor-productos"></div>
-    </main>
-    
-    <script src="/js/index.js"></script>
-    
+<main class="admin-products-page">
+
+    <h1 class="admin-products-title">LISTA DE PRODUCTOS</h1>
+    <hr class="admin-products-divider">
+
+    <div class="admin-products-container" id="contenedor-productos">
+        
+        <% productos.forEach(prod => { %>
+
+            <% let claseEstado = prod.estado == 1 ? "estado-activo" : "estado-inactivo"; %>
+            <% let estadoTexto = prod.estado == 1 ? "ACTIVO" : "INACTIVO"; %>
+
+            <div class="card-producto">
+                <img src="<%= prod.imagen_url %>" alt="<%= prod.nombre %>">
+                <p>Id: <%= prod.id %></p>
+                <h5><%= prod.nombre %></h5>
+                <p>$ <%= prod.precio %></p>
+                <p class="<%= claseEstado %>"><%= estadoTexto %></p>
+            </div>
+
+        <% }) %>
+    </div>
+
+</main>
+
 <%- include("partials/footer.ejs") %>
