--- a/tpIntegradorBack/src/views/modificar.ejs
+++ b/tpIntegradorBack/src/views/modificar.ejs
@@ -6,17 +6,17 @@
         <hr class="admin-products-divider">
 
         <div id="formulario-id"> 
-        <form id="getProduct-form">
-        <label for="idProd">Id del producto</label>
-        <input type="number" name="idProd" id="idProd" required>
-
-        <button type="submit">Consultar producto</button>
-        </form>
+            <form id="getProduct-form">
+                <label for="idProd">Id del producto</label>
+                <input type="number" name="idProd" id="idProd" required>
+                <button type="submit">Consultar producto</button>
+            </form>
         </div>
 
-        <div class="admin-products-container" id="contenedor-productos"></div>
-
-        <div class="admin-products-container" id="modificar-producto"></div>
+        <div id="contenedor-ver-producto-y-modificar-prodcuto">
+            <div class="admin-products-container" id="contenedor-productos"></div>
+            <div class="admin-products-container" id="modificar-producto"></div>
+        </div>
     </main>
 
     <script src="../js/modificar.js"></script>
