--- a/tpIntegradorFront/css/styles.css
+++ b/tpIntegradorFront/css/styles.css
@@ -316,12 +316,19 @@ footer{
     font-size: 12px;
 }
 
-
 /*
 ==========================
     LISTAR-PRODUCTOS.JS
 ==========================
 */
+#mensaje-bienvenida{
+    display: flex;
+    justify-content: center;
+    font-size: 1.5rem;
+    margin-bottom: 20px;
+    color: #393E46;
+}
+
 .contenedor-productos {
     display: flex;
     flex-wrap: wrap; 
