--- a/tpIntegradorBack/src/views/partials/head.ejs
+++ b/tpIntegradorBack/src/views/partials/head.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TP Integrador front</title>
+    <title>PixelDisk-Admin</title>
 
     <link rel="stylesheet" href="../css/dashboard.css">
 </head>
